expanded api querying of history to add a search field
